...
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp" >


            <ImageView
                android:id="@+id/vibe_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_no_vibe" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reason_text_input"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pick_location" />

                <ImageButton
...
                android:id="@+id/add_edit_map_fragment"
                android:name="com.example.vybe.Fragments.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <Button
                android:id="@+id/add_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@android:color/white" />
...
